--- a/src/assets/scss/theme.scss
+++ b/src/assets/scss/theme.scss
@@ -353,3 +353,13 @@ span.flatpickr-weekday {
 .css-sourceMap-modules-importLoaders-1-localIdentName-ReactDrawer__overlay___2QFmC-sass {
   background: rgba(0, 0, 0, 0.15) !important;
 }
+
+
+.custom-circle{
+  width: 15px !important ;
+  height: 15px !important ;;
+  border-radius: 100% !important ;
+  float: left;
+  margin-right: 6px;
+  margin-top: 2px;
+}
