add graph custom

--- a/src/assets/scss/theme.scss
+++ b/src/assets/scss/theme.scss
@@ -363,3 +363,13 @@ span.flatpickr-weekday {
   margin-right: 6px;
   margin-top: 2px;
 }
+.green-color{
+  
+  background-color: green;
+}
+  .red-color{
+    background-color: red;
+  }
+  .blue-color{
+    background-color: blue;
+  }
