Add modify graph color final

--- a/src/assets/scss/theme.scss
+++ b/src/assets/scss/theme.scss
@@ -365,11 +365,11 @@ span.flatpickr-weekday {
 }
 .green-color{
   
-  background-color: green;
+  background-color: #05B2DC;
 }
   .red-color{
-    background-color: red;
+    background-color: #FD96A9;
   }
   .blue-color{
-    background-color: blue;
+    background-color: #033860;
   }
