Add tooltip module

--- a/src/assets/scss/_variables-dark.scss
+++ b/src/assets/scss/_variables-dark.scss
@@ -4,6 +4,7 @@
 // custom-variables
 //
 
+$tooltip-color: #aaa;
 // Vertical Sidebar - Default Light
 $sidebar-bg: #ffffff;
 $sidebar-menu-item-color: #545a6d;
