--- a/src/assets/scss/custom/structure/_vertical.scss
+++ b/src/assets/scss/custom/structure/_vertical.scss
@@ -94,7 +94,10 @@
       a {
         display: block;
         padding: 0.625rem 1.5rem;
-        color: $sidebar-menu-item-color;
+     //   color: $sidebar-menu-item-color;
+        color:$menu-new-text-color;
+        
+
         position: relative;
         font-size: 13px;
         transition: all 0.4s;
@@ -111,10 +114,12 @@
         }
 
         &:hover {
-          color: $sidebar-menu-item-hover-color;
+         // color: $sidebar-menu-item-hover-color;
+          color: $primary;
 
           i {
-            color: $sidebar-menu-item-hover-color;
+            // color: $sidebar-menu-item-hover-color;
+            color: $primary;
           }
         }
       }
@@ -276,6 +281,7 @@
         > li {
           position: relative;
           white-space: nowrap;
+          border: 1px solid red;
 
           > a {
             padding: 15px 20px;
@@ -288,32 +294,34 @@
               color: $sidebar-menu-item-hover-color;
             }
 
-            i {
-              font-size: 1.45rem;
-              margin-left: 4px;
-            }
+            // i {
+            //   font-size: 1.45rem;
+            //   margin-left: 4px;
+            // }
 
-            span {
-              display: none;
-              padding-left: 25px;
-            }
+            // span {
+            //   display: none;
+            //   padding-left: 25px;
+            // }
           }
 
           &:hover {
             > a {
+              //hover here
+          //    border: 1px solid rgba(0,0,0,0.1);  
               position: relative;
               width: calc(190px + #{$sidebar-collapsed-width});
               color: $primary;
               background-color: darken($sidebar-bg, 4%);
               transition: none;
 
-              i {
-                color: $primary;
-              }
+              // i {
+              //   color: $primary;
+              // }
 
-              span {
-                display: inline;
-              }
+              // span {
+              //   display: inline;
+              // }
             }
 
             > ul {
@@ -385,14 +393,16 @@
 
 body[data-sidebar="dark"] {
   .vertical-menu {
-    background: $sidebar-dark-bg;
+    //background: $sidebar-dark-bg;
+    background: $sidebar-new-bg;
   }
 
   #sidebar-menu {
     ul {
       li {
         a {
-          color: $sidebar-dark-menu-item-color;
+         // color: $sidebar-dark-menu-item-color;
+          color: $menu-new-text-color;
 
           i {
             color: $sidebar-dark-menu-item-icon-color;
@@ -444,7 +454,7 @@ body[data-sidebar="dark"] {
               }
 
               > ul {
-                a {
+                a {              
                   color: $sidebar-dark-menu-sub-item-color;
                   &:hover {
                     color: $sidebar-dark-menu-item-hover-color;
