--- a/src/assets/scss/custom/pages/_projects.scss
+++ b/src/assets/scss/custom/pages/_projects.scss
@@ -73,43 +73,56 @@
 
 
 
+
 // new tooltip 
-
-.my-tooltip {
-  position: relative;
-  display: inline-block;
-}
-
-.my-tooltip .tooltiptext {
-  visibility: hidden;
-  width: 120px;
-  background-color: #0d1116;
-  color: rgb(255, 255, 255);
-  text-align: center;
-  border-radius: 6px;
-  padding: 5px 0;
+.tooltiptext {
   position: absolute;
-  z-index: 1;
-  top: -5px;
-  left: 122%;
-  opacity: 0;
-  transition: opacity 2s;
+  top: 12px;
+  left: 53px;
+  background: unset;
+  color: #555;
+  min-width: 68px;
+  text-align: left;
 }
 
-.my-tooltip .tooltiptext::after {
-  content: "";
-  position: absolute;
-  top: 50%;
-  right: 100%;
-  margin-top: -5px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: transparent black transparent transparent;
 
- 
-}
-.my-tooltip:hover .tooltiptext {
-  visibility: visible;
+.vertical-collpsed {
+  .my-tooltip {
+    position: relative;
+    display: inline-block;
+  }
 
-  opacity: 1;
+  .my-tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: #0d1116;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    top: 21%;
+    left: 29%;
+    opacity: 0;
+    transition: opacity 2s;
+  }
+
+  .my-tooltip .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    right: 100%;
+    margin-top: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent black transparent transparent;
+    
+  }
+  .my-tooltip:hover .tooltiptext {
+    visibility: visible;
+
+    opacity: 1;
+  }
 }
+
